# blocksec2go-ethereum

./: .gitmodules  CardReader.py  README.md  _vyper.vy  keystore.sh  pcsc.sh  security2go.py  snakeCharmer.py  web3_utils.py
components/: ctl.py  pass.sh  setup.cfg
components/scripts/: gen-user.sh  keystore.sh
