[metadata]
name = vaultctl
description = Key Management Tooling
version = 0.5.0
author = Freight Trust and Clearing
author_email = admin@freighttrust.com
url = https://github.com/freight-trust/vaultctl
long_description = file: README.md
keywords = key management
license = Apache-2.0
classifiers =
    Development Status :: 
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    requests
    Click>=7.0
    pyyaml>=5.3.1
    jinja2
    hvac

[options.entry_points]
console_scripts =
    vaultctl = vault_ctl.ctl:main
    vault = vault_ctl.ctl:main

[options.extras_require]

# If you plan to import the testing module
testing =
    pytest

dev =
    tox
    twine
    black

test =
    pytest
    pytest-mock
    requests-mock
    pytest-cov
    pytest-click

lint =
    mypy
    flake8
    black

docs =
    doc8
    sphinx
    sphinx_autodoc_typehints
    sphinxcontrib-programoutput

docs_spelling =
    sphinxcontrib-spelling

[tool:pytest]
addopts = --cov-report term-missing --cov-branch --cov-report html --cov-report term --cov=vault_cli -vv
testpaths =
    tests/unit
    tests/integration
junit_family=xunit2

[mypy-backports.functools_lru_cache.*,setuptools.*,urllib3.*,hvac.*,pytest.*]
ignore_missing_imports = True

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[coverage:report]
exclude_lines =
    raise NotImplementedError

[doc8]
max-line-length=88
ignore-path=docs/_build
